--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,20 @@
 .container {
   padding: 0 2rem;
 }
+.nav {
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #eaeaea;
+  height: 80px;
+}
+.nav div {
+  margin: auto;
+}
 
 .main {
-  min-height: 100vh;
+  min-height: calc(100vh - 160px);
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -13,6 +24,7 @@
 }
 
 .footer {
+  height: 80px;
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -40,9 +52,8 @@
 }
 
 .title {
-  margin: 3rem 0;
   line-height: 1;
-  font-size: 2.5rem;
+  font-size: 1.6rem;
 }
 
 .title,
