--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,6 +21,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1080px;
+  margin: auto;
 }
 
 .footer {
